AME-7658 - Fixing trivial text overflow problem created in my last commit

--- a/openam-ui/openam-ui-ria/src/main/resources/css/card.less
+++ b/openam-ui/openam-ui-ria/src/main/resources/css/card.less
@@ -29,12 +29,14 @@
             font-size: 18px;
             line-height: 1.2;
             margin: 10px 0 0;
-            .ellipsis;
+            text-overflow: ellipsis;
+            overflow: hidden;
 
             &.card-name-sm {
                 font-weight: 300;
                 font-size: 16px;
-                .ellipsis;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
         }
 
@@ -43,7 +45,8 @@
             .ellipsis;
 
             div, p{
-                .ellipsis;
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
         }
 
